--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <button class="btn next" onclick="mudarImagem(1)">&#10095;</button>
             </div>
             <div class="textTime">
-                <h3 id="contador">Tempo juntos: Calculando...</h3>
+                <p id="contador">Tempo juntos: Calculando...</p>
             </div>            
         </div>
     </div>
